Updated WebSpace files after Dreamweaver edits

--- a/BCIS443.htm
+++ b/BCIS443.htm
@@ -15,8 +15,8 @@
 
 <img src="images/star.gif" width="37" height="28"><a href="https://livesql.oracle.com/apex/livesql/file/index.html#"></a><a href="bcis443_Spr_26_Flexible.htm" target="_self">Syllabus for flexible section 54</a> <img src="images/star.gif" width="37" height="28"><a href="https://freesql.com/">Free 
   Oracle&nbsp; SQL</a><br>
-  <img src="images/star.gif" width="37" height="28"> <a href="practice_1">Database 
-   practice test 1</a> <img src="images/star.gif" width="37" height="28"><a href="practice_2">Database 
+  <img src="images/star.gif" width="37" height="28"> <a href="Practice_1">Database 
+   practice test 1</a> <img src="images/star.gif" width="37" height="28"><a href="Practice_2">Database 
    practice test 2</a>&nbsp;&nbsp; <img src="images/star.gif" alt="Peer Evaluation Form" width="37" height="28"><a href="Peer Evaluation FORM IS443.doc">Peer 
   Evaluation Form&nbsp;</a><br>
   <img src="images/star.gif" width="37" height="28">Downloads: <a href="Oracle_1.htm">(1) 
