--- a/Practice_1/index.htm
+++ b/Practice_1/index.htm
@@ -1372,7 +1372,7 @@ if (navigator.appName.indexOf("Netscape") >= 0) {
 	    </div>
 	    <div class='spacer'>&nbsp;</div>
 	    <br>
-	    <p class="title">BCIS 443/543 Practice Test 1 on Chapters 1,2,3,4,5,9</p>
+	    <p class="title">IS 443/543 Practice Test 1 on Chapters 1,2,3,4,5,9</p>
 	</td>
     </tr>
 </table>
